[lib]
name = 'bitvm'
crate-type = ['cdylib']


[package]
name = 'bitvm'
version = '0.0.1'
edition = '2021'


[dependencies]
bitvm = { git = "https://github.com/BitVM/BitVM", rev="6f8c3901e46581ab012eed2fb6e54ed035b7c534" }
pyo3 = { version='0.20.3', features = ['extension-module'] }


[patch.crates-io.base58check]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"


[patch.crates-io.bitcoin]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"


[patch.crates-io.bitcoin_hashes]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"


[patch.crates-io.bitcoin-internals]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"


[patch.crates-io.bitcoin-io]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"


[patch.crates-io.bitcoin-units]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"
