[build-system]
requires = ['maturin>=0.13,<0.14']
build-backend = 'maturin'


[project]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Rust',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
license = {file='LICENSE'}
name = 'bitvm'
requires-python = '>=3.8'


[tool.poetry]
authors = [
  'Sitt Guruvanich <aekazitt+github@gmail.com>'
]
description = 'Python wrapper for BitVM Rust implementation'
name = 'bitvm'
version = '0.0.1'
packages = [{include='bitvm.pyi'}]


[tool.poetry.dependencies]
python = '^3.8'


[tool.poetry.dev-dependencies]
maturin = '^0.13.1'
