[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']


[project]
classifiers = [
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy'
]
license = {file='LICENSE'}
name = 'bitvm'
requires-python = '>=3.8'


[tool.poetry]
authors = [
  'Sitt Guruvanich <aekazitt+github@gmail.com>'
]
description = 'Python wrapper for BitVM Rust implementation'
name = 'bitvm'
version = '0.0.1'
packages = [
  {include='bitvm.pyi'},
  {from='src', include='bitvm'}
]


[tool.poetry.dependencies]
python = '^3.9'
python-bitcoinlib = '^0.12.2'
numpy = '^1.26.4'


[tool.poetry.group.dev.dependencies]
ruff = '^0.3.7'
pytest = '^8.1.1'


[tool.pytest.ini_options]
addopts = '--strict-markers --tb=short -s'
python_files = '*.py'
testpaths = [ 'tests' ]
